--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "0.69.5",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5"
   },
@@ -22,6 +22,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
   },
   "private": true
